refactored and removed getAppInfra()